# ibus-hangul-jis

./: .gitignore  Makefile.am  README  configure.ac  ibus-hangul-jis.spec.in
data/: Makefile.am  org.freedesktop.ibus.engine.hanguljis.gschema.xml  org.freedesktop.ibus.engine.hanguljis.metainfo.xml.in
po/: POTFILES.in  zh_CN.po
setup/: Makefile.am  ibus-setup-hangul-jis.desktop.in  keycapturedialog.py  main.py  setup.ui
src/: Makefile.am  engine.c  hanguljis.xml.in.in  main.c  test-ustring.c
tests/: Makefile.am  ibus-hangul.c
